syntax = "proto3";

package products;

message CreateProductRequest{
    string name = 1;
    string category =2;
    float price =3;
    int32 stock = 4;
    float rating = 5;
    string description = 6;
};

message CreateProductResponse{};
message CreateProductManyRequest {
    repeated CreateProductRequest products = 1;
};
message CreateProductManyResponse {
    repeated CreateProductResponse responses = 1;
};
service ProductsService{
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
    rpc CreateProductMany(CreateProductManyRequest) returns (CreateProductManyResponse);
}